--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@
     font-size: 19px;
     line-height: 24px;
     margin: 30px 0;
-    font-family: 'Permanent Marker', cursive; 
+    font-family: 'Poppins'; 
 }
 .left-text a img{
     width: 60px;
