--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@
     color: #fff;
     font-size: 20px;
     font-weight: 700;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
 }
 .left-text p{
     color: #fff;
@@ -105,7 +105,7 @@
     font-size: 19px;
     line-height: 24px;
     margin: 30px 0;
-    font-family: 'Poppins'; 
+    font-family: 'Poppins', sans-serif; 
 }
 .left-text a img{
     width: 60px;
@@ -143,20 +143,20 @@
     font-size: 50px;
     font-weight: 400;
     margin-bottom: 30px;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
 }
 .right-text h3{
     font-weight: 500;
     margin-bottom: 30px;
     color: #333;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
 }
 .right-text p{
     font-size: 22px;
     margin-bottom: 30px;
     color: black;
     font-weight: 100;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Poppins', sans-serif;
 }
 .right-text a{
     text-decoration: none;
