--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@
 }
 .left-text p{
     color: #fff;
-    font-weight: 200;
+    font-weight: ;
     font-size: 19px;
     line-height: 24px;
     margin: 30px 0;
