--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@
     justify-content: space-between;
 }
 .logo{
-    width: 100px;
+    width: 500px;
     cursor: pointer;
     size: cover;
 }
@@ -97,15 +97,15 @@
     color: #fff;
     font-size: 20px;
     font-weight: 700;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Permanent Marker', cursive;
 }
 .left-text p{
     color: #fff;
-    font-weight: ;
+    font-weight: 100;
     font-size: 19px;
     line-height: 24px;
     margin: 30px 0;
-    font-family: 'Poppins', sans-serif; 
+    font-family: 'Permanent Marker', cursive; 
 }
 .left-text a img{
     width: 60px;
@@ -143,20 +143,20 @@
     font-size: 50px;
     font-weight: 400;
     margin-bottom: 30px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Permanent Marker', cursive;
 }
 .right-text h3{
     font-weight: 500;
     margin-bottom: 30px;
     color: #333;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Permanent Marker', cursive;
 }
 .right-text p{
     font-size: 22px;
     margin-bottom: 30px;
     color: black;
     font-weight: 100;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Permanent Marker', cursive;
 }
 .right-text a{
     text-decoration: none;
@@ -264,4 +264,98 @@ li::before{
 }
 .service{
     background-image: url(IMG-20220507-WA0000.jpg);
+}
+.footer-top {
+    padding-top: 80px;
+    padding-bottom: 30px;
+    text-align: center;
+ }
+ 
+ .footer-bottom {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    text-align: center;
+    background-color: lightblue;
+ }
+ 
+ footer{
+	position: relative;
+	width: 100%;
+	height: 400px;
+	background: #101010;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+footer p:nth-child(1){
+	font-size: 30px;
+	color: white;
+	margin-bottom: 20px;
+	font-weight: bold;
+}
+footer p:nth-child(2){
+	color: white;
+	font-size: 17px;
+	width: 500px;
+	text-align: center;
+	line-height: 26px;
+}
+.social{
+	display: flex;
+}
+.social a{
+	width: 45px;
+	height: 45px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background:  #f9004d;
+	border-radius: 50%;
+	margin: 22px 10px;
+	color: white;
+	text-decoration: none;
+	font-size: 20px;
+}
+.social a:hover{
+	transform: scale(1.3);
+	transition: .3s;
+}
+.end{
+	position: absolute;
+	color:#f9004d;
+	bottom: 35px;
+	font-size: 14px; 
+}
+.wrapper .button{
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    float: left;
+    margin: 0 5px;
+    overflow: hidden;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: 0px10px 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-out;
+}
+.wrapper.button:hover{
+    width: 200px;
+}
+.wrapper.button:icon{
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    text-align: center;
+    border-radius: 50px;
+}
+.wrapper .button:nth-child(1) span{
+    color: #fff;
+}
+.wrapper .button:nth-child(2) span{
+    color: #fff;
+}
+.wrapper .button:nth-child(3) span{
+    color: #fff;
 }
